--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body
 {
     background: url('images/fond_jaune.png');
     font-family: 'Trebuchet MS', Arial, sans-serif;
-    color: #181818;
+    color: rgb(0, 0, 0);
 }
 
 #bloc_page
@@ -107,7 +107,7 @@ nav li
 nav a
 {
     font-size: 1.3em;
-    color: #181818;
+    color: blue;
     padding-bottom: 3px;
     text-decoration: none;
 }
